--- a/css/layouts/side-menu.css
+++ b/css/layouts/side-menu.css
@@ -140,7 +140,7 @@ appears on the left side of the page.
     */
     #menu .pure-menu-selected,
     #menu .pure-menu-heading {
-        background: #888;
+        background: #1f8dd6;
     }
         /*
         This styles a link within a selected menu item `<li>`.
@@ -154,7 +154,7 @@ appears on the left side of the page.
     */
     #menu .pure-menu-heading {
         font-size: 110%;
-        color: #dd2200;
+        color: #fff;
         margin: 0;
     }
 
@@ -258,17 +258,4 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     }
 }
 
-Commercial 	Nat. Gas 	LPG
-- Catering 		
 
-Commercial Catering Range Cookers NG
-
-Commercial Catering Range Cookers LPG
-
-Commercial Catering Fat & Pressure Fryers NG
-
-Commercial Catering Fat & Pressure Fryers LPG
-
-Commercial Catering Forced Draught Burners NG
-
-Commercial Catering Forced Draught Burners LPG
